build/log/idf_py_stdout_output_10272
[1/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/Src/mcp9808.c.obj
[2/10] Linking C static library esp-idf\main\libmain.a
[3/10] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D C:\Users\piotr\OneDrive\Pulpit\X003\http_server\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.0_py3.11_env\Scripts\python.exe C:/Espressif/frameworks/esp-idf-v5.0.1-2/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 C:/Users/piotr/OneDrive/Pulpit/X003/http_server/build/bootloader/bootloader.bin"
Bootloader binary size 0x6710 bytes. 0x8f0 bytes (8%) free.
[4/8] Generating ld/sections.ld
FAILED: esp-idf/esp_system/ld/sections.ld C:/Users/piotr/OneDrive/Pulpit/X003/http_server/build/esp-idf/esp_system/ld/sections.ld 
cmd.exe /C "cd /D C:\Users\piotr\OneDrive\Pulpit\X003\http_server\build\esp-idf\esp_system && C:\Espressif\python_env\idf5.0_py3.11_env\Scripts\python.exe C:/Espressif/frameworks/esp-idf-v5.0.1-2/tools/ldgen/ldgen.py --config C:/Users/piotr/OneDrive/Pulpit/X003/http_server/sdkconfig --fragments-list C:/Espressif/frameworks/esp-idf-v5.0.1-2/components/xtensa/linker.lf;C:/Espressif/frameworks/esp-idf-v5.0.1-2/components/esp_ringbuf/linker.lf;C:/Espressif/frameworks/esp-idf-v5.0.1-2/components/driver/linker.lf;C:/Espressif/frameworks/esp-idf-v5.0.1-2/components/esp_pm/linker.lf;C:/Espressif/frameworks/esp-idf-v5.0.1-2/components/spi_flash/linker.lf;C:/Espressif/frameworks/esp-idf-v5.0.1-2/components/esp_system/linker.lf;C:/Espressif/frameworks/esp-idf-v5.0.1-2/components/esp_system/app.lf;C:/Espressif/frameworks/esp-idf-v5.0.1-2/components/esp_rom/linker.lf;C:/Espressif/frameworks/esp-idf-v5.0.1-2/components/hal/linker.lf;C:/Espressif/frameworks/esp-idf-v5.0.1-2/components/log/linker.lf;C:/Espressif/frameworks/esp-idf-v5.0.1-2/components/heap/linker.lf;C:/Espressif/frameworks/esp-idf-v5.0.1-2/components/soc/linker.lf;C:/Espressif/frameworks/esp-idf-v5.0.1-2/components/esp_hw_support/linker.lf;C:/Espressif/frameworks/esp-idf-v5.0.1-2/components/freertos/linker.lf;C:/Espressif/frameworks/esp-idf-v5.0.1-2/components/newlib/newlib.lf;C:/Espressif/frameworks/esp-idf-v5.0.1-2/components/newlib/system_libs.lf;C:/Espressif/frameworks/esp-idf-v5.0.1-2/components/esp_common/common.lf;C:/Espressif/frameworks/esp-idf-v5.0.1-2/components/esp_common/soc.lf;C:/Espressif/frameworks/esp-idf-v5.0.1-2/components/app_trace/linker.lf;C:/Espressif/frameworks/esp-idf-v5.0.1-2/components/esp_event/linker.lf;C:/Espressif/frameworks/esp-idf-v5.0.1-2/components/esp_phy/linker.lf;C:/Espressif/frameworks/esp-idf-v5.0.1-2/components/lwip/linker.lf;C:/Espressif/frameworks/esp-idf-v5.0.1-2/components/esp_netif/linker.lf;C:/Espressif/frameworks/esp-idf-v5.0.1-2/components/esp_wifi/linker.lf;C:/Espressif/frameworks/esp-idf-v5.0.1-2/components/bt/linker.lf;C:/Espressif/frameworks/esp-idf-v5.0.1-2/components/esp_adc/linker.lf;C:/Espressif/frameworks/esp-idf-v5.0.1-2/components/esp_gdbstub/linker.lf;C:/Espressif/frameworks/esp-idf-v5.0.1-2/components/esp_lcd/linker.lf;C:/Espressif/frameworks/esp-idf-v5.0.1-2/components/esp_psram/linker.lf;C:/Espressif/frameworks/esp-idf-v5.0.1-2/components/espcoredump/linker.lf --input C:/Espressif/frameworks/esp-idf-v5.0.1-2/components/esp_system/ld/esp32/sections.ld.in --output C:/Users/piotr/OneDrive/Pulpit/X003/http_server/build/esp-idf/esp_system/ld/sections.ld --kconfig C:/Espressif/frameworks/esp-idf-v5.0.1-2/Kconfig --env-file C:/Users/piotr/OneDrive/Pulpit/X003/http_server/build/config.env --libraries-file C:/Users/piotr/OneDrive/Pulpit/X003/http_server/build/ldgen_libraries --objdump C:/Espressif/tools/xtensa-esp32-elf/esp-2022r1-11.2.0/xtensa-esp32-elf/bin/xtensa-esp32-elf-objdump.exe"
Traceback (most recent call last):
  File "C:\Espressif\frameworks\esp-idf-v5.0.1-2\tools\ldgen\ldgen.py", line 183, in <module>
    main()
  File "C:\Espressif\frameworks\esp-idf-v5.0.1-2\tools\ldgen\ldgen.py", line 147, in main
    sdkconfig = SDKConfig(kconfig_file, config_file)
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Espressif\frameworks\esp-idf-v5.0.1-2\tools\ldgen\ldgen\sdkconfig.py", line 14, in __init__
    self.config = kconfiglib.Kconfig(kconfig_file)
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Espressif\python_env\idf5.0_py3.11_env\Lib\site-packages\kconfiglib.py", line 947, in __init__
    self._init(filename, warn, warn_to_stderr, encoding)
  File "C:\Espressif\python_env\idf5.0_py3.11_env\Lib\site-packages\kconfiglib.py", line 1085, in _init
    self._parse_block(None, self.top_node, self.top_node).next = None
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Espressif\python_env\idf5.0_py3.11_env\Lib\site-packages\kconfiglib.py", line 2989, in _parse_block
    prev = self._parse_block(None, parent, prev)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Espressif\python_env\idf5.0_py3.11_env\Lib\site-packages\kconfiglib.py", line 2989, in _parse_block
    prev = self._parse_block(None, parent, prev)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Espressif\python_env\idf5.0_py3.11_env\Lib\site-packages\kconfiglib.py", line 3028, in _parse_block
    self._parse_block(_T_ENDMENU, node, node)
  File "C:\Espressif\python_env\idf5.0_py3.11_env\Lib\site-packages\kconfiglib.py", line 2941, in _parse_block
    self._parse_props(node)
  File "C:\Espressif\python_env\idf5.0_py3.11_env\Lib\site-packages\kconfiglib.py", line 3141, in _parse_props
    while self._next_line():
          ^^^^^^^^^^^^^^^^^
  File "C:\Espressif\python_env\idf5.0_py3.11_env\Lib\site-packages\kconfiglib.py", line 2236, in _next_line
    self._tokens = self._tokenize(line)
                   ^^^^^^^^^^^^^^^^^^^^
  File "C:\Espressif\python_env\idf5.0_py3.11_env\Lib\site-packages\kconfiglib.py", line 2371, in _tokenize
    self._parse_assignment(s)
  File "C:\Espressif\python_env\idf5.0_py3.11_env\Lib\site-packages\kconfiglib.py", line 2627, in _parse_assignment
    self._parse_error("syntax error")
  File "C:\Espressif\python_env\idf5.0_py3.11_env\Lib\site-packages\kconfiglib.py", line 3879, in _parse_error
    raise KconfigError("{}error: couldn't parse '{}': {}".format(
kconfiglib.KconfigError: C:/Users/piotr/OneDrive/Pulpit/X003/http_server/main/Kconfig.projbuild:51: error: couldn't parse 'double "T lower value (C)"': syntax error
ninja: build stopped: subcommand failed.
